--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "bootstrap": "^4.6.0",
+    "libphonenumber-js": "^1.9.11",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.15.1",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.8"
@@ -43,7 +47,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.17.0",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
